2004-03-19  Radek Doulik  <rodo@ximian.com>

	* image.c (image_widget): default gnome pixmap entry set to home
	dir
	(get_data): do not use image location if it has template_image
	data set
	(insert_or_apply): reset template_image data

	* editor-control-factory.c (html_button_pressed_after): do not
	reset template_image data here, do it when applying changes so
	that it will survive cancel response and will bring properties
	dialog again

	Fixes #54566

2004-03-12  Rodney Dawes  <dobey@ximian.com>

	* Makefile.am (%.server): Don't put Makefile in the list after :
	This avoids the circular dependency and causing the server file to
	get overridden with the contents of Makefile in some cases
	(BUILT_SOURCES): remove $(server_DATA) and $(ui_DATA) from here
	(CLEANFILES): and put $(server_DATA) and $(ui_DATA) here instead

2004-03-12  Radek Doulik  <rodo@ximian.com>

	* replace.c (ask_dialog_new): use CANCEL response for CLOSE button
	(gtk_html_replace_dialog_new): ditto
	(ask_dialog_response): handle CANCEL response as well as CLOSE one
	(replace_dialog_response): ditto

	* search.c (gtk_html_search_dialog_new): use CANCEL response for
	close button, gtkdialog.c closes dialog when Esc key is pressed
	only if there's CANCEL response present
	(search_dialog_response): handle CANCEL response as well as CLOSE
	one

	Fixes #47064

2004-02-26    <rodo@ximian.com>

	* image.c (insert_or_apply): set alt to d->alt instead of d->url

2004-02-17  Radek Doulik  <rodo@ximian.com>

	* popup.c (prepare_properties_and_menu): do not add "Insert Link"
	popup menu item in plain text mode
	(prepare_properties_and_menu): capitalize link in "Insert Link"
	(prepare_properties_and_menu): add separator before "Input
	Methods"
	(prepare_properties_and_menu): do not add separator after "Style"
	submenu and place it before table items

2004-02-13  Radek Doulik  <rodo@ximian.com>

	* image.c (load_done): new handler, replaces set_size idle
	callback
	(image_widget): hoohkup load_done
